--- a/package.json
+++ b/package.json
@@ -1,16 +1,27 @@
 {
   "name": "vue-qr-code",
   "scope": null,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "vue-qr-code",
   "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "qr",
+    "code",
+    "qrcode",
+    "vue",
+    "component"
+  ],
   "author": "黄佳滨 <qq1187712426@gmail.com>",
   "dependencies": {
     "qrcode": "^0.9.0",
     "vue": "^2.5.2"
   },
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/csjiabin/vue-qr-code.git"
+  },
+  "license": "MIT"
 }
